# llamagpt-rs

./: .gitignore  CONTRIBUTING.md  README.md  main.sh  pyproject.toml  requirements.txt  setup.py
docs/: api.md  examples.md  index.html  index.md  installation.md  usage.md
docs/api/: index.html  index.md
examples/: advanced_usage.py  basic_usage.py
llamagpt_rs/: __init__.py  client.py  main.py  utils.py
src/llamagpt_rs/: __init__.py
tests/: test_client.py  test_main.py
ultimate-llamagpt-mlx/: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  llamagpt.sh
ultimate-llamagpt-mlx/docker/: Dockerfile
ultimate-llamagpt-mlx/src/: cli.rs  main.rs
