[package]
name = "ultimate-llamagpt-mlx"
version = "0.2.0"
edition = "2021"
description = "Ultimate LlamaGPT-MLX: Advanced intelligent CLI assistant with on-device inference and immersive TUI."
authors = ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"] ["Nik Jois <nikjois@llamasearch.ai>"]
repository = "https://github.com/yourusername/ultimate-llamagpt-mlx"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.32", features = ["full", "tracing"] }
clap = { version = "4.4", features = ["derive", "env"] }
ratatui = "0.24.0"
crossterm = "0.27.0"
indicatif = "0.17.7"
dialoguer = "0.11.0"
console = "0.15.7"
syntect = "5.1.0"
notify-rust = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
config = "0.13.4"
colored = "2.0.4"
dirs = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
bytesize = "1.3.0"
lazy_static = "1.4.0"
thiserror = "1.0.50"
anyhow = "1.0.75"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
async-trait = "0.1.74"
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19.0"
tui-textarea = "0.2.0"
tui-input = "0.8.0"
tui-logger = "0.9.6"
sysinfo = "0.29.10"
which = "4.4.2"
cxx = "1.0.108"
ffi = "0.0.2"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
rstest = "0.18.2"

[build-dependencies]
cxx-build = "1.0.108"

[features]
default = ["apple-silicon", "animations"]
apple-silicon = []
animations = []
voice = []

[[bin]]
name = "llamagpt"
path = "src/main.rs"
